--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<div class="flex min-h-screen flex-col items-center bg-black py-6 text-white">
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset='utf-8'>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+	<title>Home - DNA Project</title>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<link rel='stylesheet' type='text/css' media='screen' href='/main.css'>
+</head>
+<body>
+	<div class="flex min-h-screen flex-col items-center bg-black py-6 text-white">
   
   <figure class="relative mt-10 ">
     <div class="absolute flex inset-0 z-20 items-center justify-center translate-y-10"><h1 class="text-7xl md:text-9xl  font-black min-w-max">Steven Barnes</h1></div>
@@ -33,3 +43,6 @@
   </div>
   <footer class="mt-10 max-w-2xl w-full flex justify-between bg-white/10 border border-gray-600 rounded-lg py-2 px-4">Made by Lukas. <a>Github NEED LINK</a></footer>
 </div>
+
+</body>
+</html>
