--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<title>Home - DNA Project</title>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
-	<link rel='stylesheet' type='text/css' media='screen' href='/main.css'>
+	<link rel='stylesheet' type='text/css' media='screen' href='./main.css'>
 </head>
 <body>
 	<div class="flex min-h-screen flex-col items-center bg-black py-6 text-white">
@@ -19,9 +19,9 @@
   </figure><figcaption class="mt-2 text-center text-gray-200 text-sm">Caption as per requierment: This is a photo of Steven Barnes</figcaption>
 
   <div class="flex mt-8 [&>a]:bg-white/10 [&>a]:border [&>a]:rounded-lg [&>a]:py-1 [&>a]:px-4 space-x-6 font-medium [&>a]:border-gray-600">
-    <a href="/" class="!bg-white/20 !border-gray-400">Home</a>
-    <a href="/dna">About DNA</a>
-    <a href="/sources">Sources</a>
+    <a href="/dna-bio-website" class="!bg-white/20 !border-gray-400">Home</a>
+    <a href="/dna-bio-website/dna">About DNA</a>
+    <a href="/dna-bio-website/sources">Sources</a>
   </div>
 
   <h2 class="mt-10 mb-4 text-3xl font-bold">Background Information</h2>
