--- a/dna.html
+++ b/dna.html
@@ -5,7 +5,7 @@
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<title>About DNA - DNA Project</title>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
-	<link rel='stylesheet' type='text/css' media='screen' href='/main.css'>
+	<link rel='stylesheet' type='text/css' media='screen' href='/dna-bio-website/main.css'>
 </head>
 <body>
 	<div class="flex min-h-screen flex-col items-center bg-black py-6 text-white">
@@ -18,9 +18,9 @@
   <figcaption class="mt-2 text-center text-sm text-gray-200">Caption as per requierment: This is a photo of Steven Barnes</figcaption>
 
   <div class="mt-8 flex space-x-6 font-medium [&>a]:rounded-lg [&>a]:border [&>a]:border-gray-600 [&>a]:bg-white/10 [&>a]:py-1 [&>a]:px-4">
-    <a href="/">Home</a>
-    <a href="/dna" class="!border-gray-400 !bg-white/20">About DNA</a>
-    <a href="/sources">Sources</a>
+    <a href="/dna-bio-website/">Home</a>
+    <a href="/dna-bio-website/dna" class="!border-gray-400 !bg-white/20">About DNA</a>
+    <a href="/dna-bio-website/sources">Sources</a>
   </div>
 <div class="s mt-10 text-blue-500  flex flex-col">
   <h2 class="font-medium text-lg text-white mb-1">Table of contents</h2>
