--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="flex mt-8 [&>a]:bg-white/10 [&>a]:border [&>a]:rounded-lg [&>a]:py-1 [&>a]:px-4 space-x-6 font-medium [&>a]:border-gray-600">
     <a href="/dna-bio-website" class="!bg-white/20 !border-gray-400">Home</a>
     <a href="/dna-bio-website/dna">About DNA</a>
-    <a href="/dna-bio-website/sources">Sources</a>
+    <a href="/dna-bio-website/sources.html">Sources</a>
   </div>
 
   <h2 class="mt-10 mb-4 text-3xl font-bold">Background Information</h2>
@@ -40,6 +40,7 @@
     <p>According to the Innocence Project, "microscopic hair analysis, soil comparison and fabric print analysis have not been validated scientifically" (Innocence Project). When a forensic analysis looked for fingerprints, he testifed that none of the defendants were found at the scene.</p>
 
     <p>4 Years later, the Innocence Project steped in. They obtained DNA evidince from the Oneida County District Attorney, and eventually, in 2007, they were able to test the DNA and find that none was left at the crime scene. After serving 20 years in jail, he was released.</p>
+	  <img src="https://www.wbdg.org/images/courtroom_016.jpg" class="lg:max-w-2xl" />
   </div>
 <footer class="mt-10 flex w-full max-w-2xl justify-between rounded-lg border border-gray-600 bg-white/10 py-2 px-4">Made by Lukas. <a class="text-blue-500 hover:underline" target="_blank" href="https://github.com/quick007/dna-bio-website">Github (the code)</a></footer></div>
 
