--- a/dna.html
+++ b/dna.html
@@ -20,7 +20,7 @@
   <div class="mt-8 flex space-x-6 font-medium [&>a]:rounded-lg [&>a]:border [&>a]:border-gray-600 [&>a]:bg-white/10 [&>a]:py-1 [&>a]:px-4">
     <a href="/dna-bio-website/">Home</a>
     <a href="/dna-bio-website/dna" class="!border-gray-400 !bg-white/20">About DNA</a>
-    <a href="/dna-bio-website/sources">Sources</a>
+    <a href="/dna-bio-website/sources.html">Sources</a>
   </div>
 <div class="s mt-10 text-blue-500  flex flex-col">
   <h2 class="font-medium text-lg text-white mb-1">Table of contents</h2>
