--- a/dna.html
+++ b/dna.html
@@ -38,7 +38,7 @@
   <img src="https://github.com/quick007/dna-bio-website/blob/main/Frame%2011%20(1).png?raw=true" alt="" class="object-cover lg:max-w-3xl" />
   <p class="mt-2 max-w-2xl text-gray-200">A chromosome is made up of a protein that has DNA coiled around it. (Shuster)</p>
   <img src="https://github.com/quick007/dna-bio-website/blob/main/Frame%2012.png?raw=true" alt="" class="lg:max-w-5xl" />
-  <p class="mt-2 max-w-2xl text-center">This is what DNA looks like, (well, sort of). Each side is made up of a set of nucelotides, which contains a phosphate (green), sugar (red), and a base (white). Two nucelotides form a hydrogen bond based on their base (A matches with T and G with C.) <span class="text-gray-300">(Hardin; Shuster)</span></p>
+  <p class="mt-2 max-w-2xl text-center">This is what DNA looks like, (well, sort of). Each side is made up of a set of nucelotides, which contains a phosphate (green), sugar (red), and a base (white). Two nucelotides form a hydrogen bond based on their base (adenine (A) matches with thymine (T) and guanine (G) with cytosine (C).) In humans, over 99% of DNA is the same, but the remaining DNA normally reffers to certain traits, i.e. blue eyes or black hair.<span class="text-gray-300">(Hardin; Shuster)</span></p>
   <h2 class="mt-32 text-3xl font-bold md:text-5xl" id="rep">DNA Replication</h2>
 
   <img src="https://github.com/quick007/dna-bio-website/blob/main/Frame%2013.png?raw=true" alt="" class="lg:max-w-2xl" />
