--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <p>4 Years later, the Innocence Project steped in. They obtained DNA evidince from the Oneida County District Attorney, and eventually, in 2007, they were able to test the DNA and find that none was left at the crime scene. After serving 20 years in jail, he was released.</p>
 	  <img src="https://www.wbdg.org/images/courtroom_016.jpg" class="lg:max-w-2xl" />
+	  <figcaption class="mt-2 text-center text-gray-200 text-sm">This is a courtroom</figcaption>
   </div>
 <footer class="mt-10 flex w-full max-w-2xl justify-between rounded-lg border border-gray-600 bg-white/10 py-2 px-4">Made by Lukas. <a class="text-blue-500 hover:underline" target="_blank" href="https://github.com/quick007/dna-bio-website">Github (the code)</a></footer></div>
 
